[gd_scene load_steps=30 format=2]

[ext_resource path="res://IN-GAME-ACTIONS/GameStartMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://IN-GAME-BACKGROUNDS/CashRegister.tscn" type="PackedScene" id=2]
[ext_resource path="res://IN-GAME-CUSTOMERS/Customer.tscn" type="PackedScene" id=3]
[ext_resource path="res://IN-GAME-ACTIONS/Buttons.tscn" type="PackedScene" id=4]
[ext_resource path="res://IN-GAME-ACTIONS/MoneyCollectedLabel.tscn" type="PackedScene" id=5]
[ext_resource path="res://IN-GAME-ACTIONS/RingBell.tscn" type="PackedScene" id=6]
[ext_resource path="res://IN-GAME-ACTIONS/GameOverTab.tscn" type="PackedScene" id=7]
[ext_resource path="res://IN-GAME-ACTIONS/Money-counta'h.tscn" type="PackedScene" id=8]
[ext_resource path="res://IN-GAME-BACKGROUNDS/Background.tscn" type="PackedScene" id=9]
[ext_resource path="res://PixelFont.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://dropshadow.png" type="Texture" id=11]
[ext_resource path="res://IN-GAME-SCENES/Main.gd" type="Script" id=12]
[ext_resource path="res://Ticking.tscn" type="PackedScene" id=13]
[ext_resource path="res://FastFoodEmUp-Assets/UI-Buttons/YesPressed (1).png" type="Texture" id=14]
[ext_resource path="res://FastFoodEmUp-Assets/UI-Buttons/Yes (1).png" type="Texture" id=15]
[ext_resource path="res://BLACK.png" type="Texture" id=16]
[ext_resource path="res://SOUND_EFFECTS/SFX/BUTTON_SOUND.wav" type="AudioStream" id=17]
[ext_resource path="res://SOUND_EFFECTS/SFX/5X_UPGRADE_SOUND.wav" type="AudioStream" id=18]
[ext_resource path="res://SOUND_EFFECTS/SFX/3X_UPGRADE_SOUND.wav" type="AudioStream" id=19]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true

[sub_resource type="DynamicFont" id=2]
size = 280
outline_size = 15
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 10 )

[sub_resource type="Animation" id=3]
resource_name = "POP_IN"
length = 1.5
step = 0.005
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.15, 0.2, 0.22, 0.24 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 4, 4 ), Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 1.48 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Label:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
resource_name = "POP_IN"
length = 1.5
step = 0.005
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.15, 0.2, 0.22, 0.24 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 4, 4 ), Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 1.48 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Label:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="DynamicFont" id=7]
size = 100
outline_size = 2
outline_color = Color( 0.109804, 0.584314, 0.101961, 1 )
extra_spacing_char = 6
font_data = ExtResource( 10 )

[sub_resource type="Animation" id=10]
resource_name = "FADE_IN"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("LOADING_SCREEN/AnimationPlayer/Black:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LOADING_SCREEN/AnimationPlayer/Black:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "FADE_OUT"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("LOADING_SCREEN/AnimationPlayer/Black:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LOADING_SCREEN/AnimationPlayer/Black:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("LOADING_SCREEN/AnimationPlayer/Black:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LOADING_SCREEN/AnimationPlayer/Black:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="Main" type="Node2D"]
script = ExtResource( 12 )

[node name="Background" parent="." instance=ExtResource( 9 )]

[node name="Dropshadow" type="Sprite" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.376471 )
position = Vector2( 357, 396 )
scale = Vector2( 1.07639, 1.94062 )
texture = ExtResource( 11 )

[node name="Customers" parent="." instance=ExtResource( 3 )]

[node name="CashRegister" parent="." instance=ExtResource( 2 )]

[node name="Buttons" parent="." instance=ExtResource( 4 )]

[node name="RingBell" parent="." instance=ExtResource( 6 )]
position = Vector2( 57, -98 )

[node name="GameStartMenu" parent="." instance=ExtResource( 1 )]

[node name="GameOverTab" parent="." instance=ExtResource( 7 )]
visible = false
offset = Vector2( 0, -4 )
transform = Transform2D( 1, 0, 0, 1, 0, -4 )

[node name="Money-counta\'h" parent="." instance=ExtResource( 8 )]
visible = false

[node name="MoneyCollectedLabel" parent="." instance=ExtResource( 5 )]
visible = false

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="Upgrades" type="Node2D" parent="."]

[node name="THREE_X" type="Node2D" parent="Upgrades"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 521, 440 )

[node name="Label" type="Label" parent="Upgrades/THREE_X"]
self_modulate = Color( 1.6, 1.5, 1.5, 1 )
margin_left = -178.0
margin_top = -155.0
margin_right = 138.0
margin_bottom = 161.0
rect_rotation = -9.16187
custom_colors/font_color = Color( 1, 0.709804, 0.027451, 1 )
custom_fonts/font = SubResource( 2 )
text = "3x"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Upgrades/THREE_X"]
anims/POP_IN = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="THREE_X_SOUND" type="AudioStreamPlayer" parent="Upgrades/THREE_X"]
stream = ExtResource( 19 )

[node name="FIVE_X" type="Node2D" parent="Upgrades"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 521, 440 )

[node name="Label" type="Label" parent="Upgrades/FIVE_X"]
self_modulate = Color( 1.6, 1.5, 1.5, 1 )
margin_left = -154.0
margin_top = -139.0
margin_right = 162.0
margin_bottom = 177.0
rect_rotation = -9.16187
custom_colors/font_color = Color( 1, 0.709804, 0.027451, 1 )
custom_fonts/font = SubResource( 2 )
text = "5x"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Upgrades/FIVE_X"]
anims/POP_IN = SubResource( 5 )
anims/RESET = SubResource( 6 )

[node name="FIVE_X_SOUND" type="AudioStreamPlayer" parent="Upgrades/FIVE_X"]
stream = ExtResource( 18 )

[node name="Ticking" parent="." instance=ExtResource( 13 )]
position = Vector2( 634, 119 )

[node name="LOADING_SCREEN" type="Node2D" parent="."]

[node name="TextureButton" type="TextureButton" parent="LOADING_SCREEN"]
margin_left = 184.0
margin_top = 1078.0
margin_right = 539.0
margin_bottom = 1253.0
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 14 )
expand = true

[node name="Label" type="Label" parent="LOADING_SCREEN/TextureButton"]
margin_left = 68.0
margin_top = 33.0
margin_right = 310.0
margin_bottom = 146.0
custom_fonts/font = SubResource( 7 )
text = "SHOP"

[node name="AnimationPlayer" type="AnimationPlayer" parent="LOADING_SCREEN"]
root_node = NodePath("../..")
autoplay = "FADE_IN"
anims/FADE_IN = SubResource( 10 )
anims/FADE_OUT = SubResource( 8 )
anims/RESET = SubResource( 9 )

[node name="Black" type="Sprite" parent="LOADING_SCREEN/AnimationPlayer"]
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 359, 622 )
scale = Vector2( 1.85492, 2.40276 )
texture = ExtResource( 16 )

[node name="BUTTON_SOUND_PLAYER" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )

[connection signal="pressed" from="LOADING_SCREEN/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="animation_finished" from="LOADING_SCREEN/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
